--- a/client/angular.json
+++ b/client/angular.json
@@ -23,7 +23,8 @@
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "./node_modules/ngx-toastr/toastr.css"
+              "./node_modules/ngx-toastr/toastr.css",
+              "./node_modules/bootswatch/dist/cosmo/bootstrap.css"
             ],
             "scripts": []
           },
