--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,15 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
+    "bootswatch": "^5.3.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "ngx-bootstrap": "^10.3.0",
+    "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
