--- a/ReportJewelAPI/appsettings.Development.json
+++ b/ReportJewelAPI/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=verifysimply"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=verifysimply; Include Error Detail=true"
   }
 }
