add identity framework

--- a/ReportJewelAPI/appsettings.Development.json
+++ b/ReportJewelAPI/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=verifysimply; Include Error Detail=true"
-  }
+  },
+  "TokenKey": "super secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable key"
 }
