--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,8 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
               "./node_modules/ngx-toastr/toastr.css",
-              "./node_modules/bootswatch/dist/slate/bootstrap.css"
+              "./node_modules/bootswatch/dist/slate/bootstrap.css",
+              "./node_modules/ngx-spinner/animations/line-spin-clockwise-fade.css"
             ],
             "scripts": []
           },
