--- a/ReportJewelAPI/appsettings.json
+++ b/ReportJewelAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=postgres; Password=postgrespw; Database=verifysimply; Include Error Detail=true"
+  },
+  "TokenKey": "super secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable key"
 }
