--- a/ReportJewelAPI/fly.toml
+++ b/ReportJewelAPI/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for reportjewelapi on 2024-02-26T13:44:27-05:00
+# fly.toml app configuration file generated for reportjewelapi on 2024-02-26T18:07:54-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'reportjewelapi'
-primary_region = 'iad'
+primary_region = 'ewr'
 
 [build]
   image = 'wushywushy/reportjewel:latest'
@@ -15,7 +15,7 @@ primary_region = 'iad'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
