--- a/ReportJewelAPI/appsettings.json
+++ b/ReportJewelAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=postgres; Password=postgrespw; Database=verifysimply; Include Error Detail=true"
+    "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=postgres; Password=postgrespw; Database=reportjewel; Include Error Detail=true"
   },
   "TokenKey": "super secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable key"
 }
