--- a/ReportJewelAPI/appsettings.Development.json
+++ b/ReportJewelAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=verifysimply; Include Error Detail=true"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=reportjewel; Include Error Detail=true"
   },
   "TokenKey": "super secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable keysuper secret unguessable key"
 }
