--- a/ReportJewelAPI/fly.toml
+++ b/ReportJewelAPI/fly.toml
@@ -1,16 +1,16 @@
-# fly.toml app configuration file generated for reportjewelapi on 2024-02-26T18:07:54-05:00
+# fly.toml app configuration file generated for reportjewel on 2024-02-27T00:43:17-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'reportjewelapi'
+app = 'reportjewel'
 primary_region = 'ewr'
 
 [build]
   image = 'wushywushy/reportjewel:latest'
 
 [env]
-  ASPNETCORE_URLS="http://+:8080"
+  ASPNETCORE_URLS = 'http://+:8080'
 
 [http_service]
   internal_port = 8080
